# SegmentalReconciler-Greedy-Version

./: CMakeLists.txt  README.md  ReconciliationTester.cpp  ReconciliationTester.h  SegmentalReconcil.cpp  SegmentalReconcile.h  SegmentalReconciler.cpp  SegmentalReconciler.h  define.h  genespeciestreeutil.cpp  genespeciestreeutil.h  hashtable.h  main.cpp  multigenereconciler.cpp  multigenereconciler.h  newicklex.cpp  newicklex.h  node.cpp  node.h  segmental reconciliation.vcxproj  segmental reconciliation.vcxproj.filters  segrec.sln  segrec.vcxproj  segrec.vcxproj.filters  test.txt  treeinfo.cpp  treeinfo.h  treeiterator.cpp  treeiterator.h  util.h
Debug/: segmental reconciliation.exe.recipe  vc142.idb
Debug/segmenta.b127b515.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+5 more)
Release/: segmental reconciliation.exe.recipe  segmental reconciliation.iobj  segmental reconciliation.ipdb
overleaf/: TODO.txt  main_longversion.tex  main_shortversion.tex  ref.bib
sample_data/: LCAout.txt  geneTrees2.txt  genetrees.txt  out.txt  speciestree.txt
scripts/: analyze_sims_parallel.sh  apply_losses_on_simphy.py  compare_mapping.py  count_nb_dup_to_calculate_diff_v2.sh  map_gene_trees_oneWGD.py  map_gene_trees_twoWGD.py  post-order-labeling.py  segmentalreconcile_GV2_1  simphy_wgd.py  simualte_1WGD_simphy.sh  simualte_2WGD_simphy.sh
supplementaries/: analyze_simulations.sh  compare_mapping.py  count_nb_dups_in_reconciliation.sh  counter_dup_per_species.sh  create_figures.py  map_gene_trees.py  output_nbdup_csv.sh  post-order-labeling.py  recphyloxml.py  simphy_simulation.sh
(+15 files in other folders)
